--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -10,7 +10,8 @@
                 'layout-static-inactive': staticMenuDesktopInactive && app.menuMode === 'static',
                  'p-ripple-disabled': !app.ripple}">
 
-    <div class="layout-main">
+    <div class="">
+        <app-menubar></app-menubar>
         <div class="layout-main-content">
             <router-outlet></router-outlet>
         </div>
