[ADD] function to signOut and add spinner to Login

--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -10,9 +10,9 @@
                 'layout-static-inactive': staticMenuDesktopInactive && app.menuMode === 'static',
                  'p-ripple-disabled': !app.ripple}">
 
-    <div class="">
+    <div style="padding-top: 16px; padding-left: 24px; padding-right: 24px;">
         <app-menubar></app-menubar>
-        <div class="layout-main-content">
+        <div class="layout-main-content" style="padding-top: 16px;">
             <router-outlet></router-outlet>
         </div>
     </div>
