--- a/src/app/shared/menubar/menubar.component.html
+++ b/src/app/shared/menubar/menubar.component.html
@@ -1,10 +1,9 @@
-<div class="card">
-  <p-menubar [model]="items">
-      <ng-template pTemplate="start">
-          <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
-      </ng-template>
-      <ng-template pTemplate="end">
-          <input type="text" pInputText placeholder="Search" class="w-full" />
-      </ng-template>
-  </p-menubar>
-</div>
+<p-menubar [model]="items">
+  <ng-template pTemplate="start">
+    <img src="assets/logo-dark.png" height="40" class="mr-2" />
+  </ng-template>
+  <ng-template pTemplate="end">
+    <button pButton label="Cerrar sesión" icon="pi pi-times" (click)="signOut()"
+      class="p-button-secondary p-button-outlined"></button>
+  </ng-template>
+</p-menubar>
