--- a/src/app/pages/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/pages/modules/dashboard/components/dashboard/dashboard.component.html
@@ -1,3 +1,20 @@
-<p>
-  dashboard works!
-</p>
+<section class="card">
+  <h3>Listado de archivos procesados convenio WOMPI</h3>
+  <p-panel header="Cargar un nuevo archivo" [collapsed]="true" [toggleable]="true">
+    <!-- Component to charge files -->
+    <p-toast></p-toast>
+    <span style="margin-bottom: 8px;" class="p-float-label">
+      <p-dropdown [options]="zones" placeholder="Selecciona la zona" optionLabel="name" optionValue="code"
+        inputId="float-label" (onChange)="onZoneInput($event)"></p-dropdown>
+      <label for="float-label">Selecciona la zona</label>
+    </span>
+    <p-fileUpload [disabled]="selectedZone === undefined" #uploadAttachment name="file" url="" (uploadHandler)="onUpload($event)" [multiple]="false"
+      accept=".xlsx" maxFileSize="2500000" customUpload="true" cancelLabel="Cancelar" uploadLabel="Adjuntar"
+      chooseLabel="Seleccionar">
+      <ng-template pTemplate="content">
+        <div class="py-3">Arrastar y soltar archivo</div>
+      </ng-template>
+    </p-fileUpload>
+  </p-panel>
+  <app-listFiles></app-listFiles>
+</section>
