[ADD] functionality to create files and get zones

--- a/src/app/pages/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/pages/modules/dashboard/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <!-- Component to charge files -->
     <p-toast></p-toast>
     <span style="margin-bottom: 8px;" class="p-float-label">
-      <p-dropdown [options]="zones" placeholder="Selecciona la zona" optionLabel="name" optionValue="code"
+      <p-dropdown [options]="zones" placeholder="Selecciona la zona" optionLabel="name" optionValue="idZone"
         inputId="float-label" (onChange)="onZoneInput($event)"></p-dropdown>
       <label for="float-label">Selecciona la zona</label>
     </span>
